# py-paretoarchive

./: .gitignore  LICENSE  Makefile  README.md  code_test.py  gensrc.py  paretoarchive.pyx  paretoarchive.template.pyx  paretoarchive_gen.pyx  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_pareto.py
.github/workflows/: python-package.yml  python-publish.yml
include/: Makefile  paretoarchive.h  test.cpp
src/: paretoarchive.h
src/paretoarchive/: __init__.py  core.cpp  core.pyx  np.py  nullptr_emulation.h  pandas.py  paretoarchive.h
tests/: test_pandas.py  test_pareto.py
