[metadata]
name = py-paretoarchive
version = 1.00
description = Efficient incremental Pareto archive based on BSP 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Vojtech Mrazek, Zdenek Vasicek
author_email = mrazek@fit.vutbr.cz
url = https://github.com/ehw-fit/py-paretoarchive
download_urls = https://pypi.org/project/py-paretoarchive
project_urls =
	Code = https://github.com/ehw-fit/py-paretoarchive
	Issue tracker = https://github.com/ehw-fit/py-paretoarchive/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src
